# ai-interview

./: .dockerignore  .editorconfig  .env.docker.example  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  app.py  docker-compose.yaml  docker-compose.yml  main.py  pyproject.toml  requirements.txt
backend/: .env.example  main.py  requirements.txt  test_imports.py
backend/app/: dependencies.py  exceptions.py  main.py
backend/app/adapters/: __init__.py
backend/app/adapters/ai/: __init__.py  gemini_client.py  typhoon_asr.py
backend/app/adapters/pdf/: __init__.py  pdf_extraction.py  report_generator.py
backend/app/adapters/tts/: README.md  __init__.py  constants.py  exceptions.py  factory.py  gemini_tts.py  tts_provider.py
backend/app/adapters/tts/providers/: __init__.py  edge_provider.py  gemini_provider.py  vachana_provider.py
backend/app/config/: logging_config.py  prompts.py  questions_db.json  secret_manager.py  settings.py
backend/app/database/: __init__.py  db.py  models.py
backend/app/database/repositories/: __init__.py  question_repository.py
backend/app/domain/: __init__.py
backend/app/domain/interview/: __init__.py  question_manager.py
backend/app/domain/models/: __init__.py  aggregated_score.py  candidate.py  evaluation.py  question_result.py
backend/app/domain/scoring/: __init__.py  aggregator.py  evaluator.py
backend/app/repositories/: __init__.py  base.py  candidate_repository.py  interview_repository.py  question_repository.py
backend/app/routers/: auth.py  hr.py  interview.py  reports.py  tts.py
backend/app/schemas/: __init__.py  auth.py  common.py  hr.py  interview.py
backend/app/services/: __init__.py  candidate_service.py  hr_service.py  interview_service.py  mappers.py  media_service.py  question_service.py  report_service.py  storage_service.py
backend/app/services/auth/: __init__.py  auth_service.py
backend/app/services/core/: mappers.py  media_service.py  role_service.py  storage_service.py  tts_service.py
backend/app/services/hr/: hr_service.py
backend/app/services/interview/: candidate_service.py  interview_service.py  question_manager.py  question_service.py  report_service.py  resume_service.py  test1.py
backend/app/services/scoring/: aggregator.py  evaluator.py
backend/app/storage/: ai_interview.db
backend/app/utils/: __init__.py  file_ops.py
backend/config/: prompts.py
backend/core/: ai_evaluator.py  audio_processor.py  question_generator.py  tts_generator.py
backend/scripts/: create_admin.py  debug_auth.py  reset_db.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_check.py  test_interview_flow.py
backend/tests/scripts/: test_video_interview.py
backend/tests/unit/: test_main.py
config/: prompts.py
core/: audio_processor.py
docs/: README.md
docs/api/: README.md
docs/architecture/: overview.md
docs/setup/deploy/: DOCKER_DEPLOYMENT.md
frontend/: .eslintrc.js  README.md  ai-interview.html  app.vue  error.vue  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vitest.config.ts
frontend/assets/css/: main.css
frontend/components/: FeedbackSection.vue  LanguageSwitcher.vue  ScoreBarChart.vue  ScoreCard.vue  ScoreRadarChart.vue
frontend/components/charts/: ScoreBarChart.vue  ScoreCard.vue  ScoreRadarChart.vue
frontend/components/common/: BaseButton.vue  BaseCard.vue  BaseModal.vue  LoadingSpinner.vue
frontend/components/interview/: Recorder.vue
frontend/composables/: useApi.ts  useHR.ts  useInterview.ts  useMediaRecorder.ts  useReports.ts
frontend/i18n/locales/: en.json  th.json
frontend/layouts/: blank.vue  candidate.vue  default.vue  hr.vue
frontend/locales/: en.json  th.json
frontend/middleware/: auth.ts  guest.ts  hr.ts
frontend/pages/: 403.vue  index.vue  interview-screen-record.vue  login.vue  privacy.vue  question.vue  record.vue  result.vue  role-selection.vue  test-pokemon.vue
frontend/pages/example/: fetch-api.vue
frontend/pages/hr/: dashboard.vue  generate.vue  login.vue  reports.vue  roles.vue
frontend/pages/hr/reports/: [sessionId].vue  index.vue
frontend/plugins/: axios.ts
frontend/services/: auth.ts  hr.ts  interview.ts  report.ts
frontend/store/: auth.ts  hr.ts  interview.ts
frontend/tests/: tsconfig.json
frontend/tests/unit/composables/: useInterview.spec.ts
frontend/types/: api.ts  candidate.ts  errors.ts  index.ts  interview.ts  question.ts  report.ts
frontend/utils/: constants.ts  date.ts  format.ts  index.ts  validation.ts
